<resources>
    <string name="app_name">TwoActivities</string>
    <string name="text_button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="text_button_second">Reply</string>
    <string name="editText_hint_main">Enter your message here</string>
    <string name="editText_hint_second">Enter your reply here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>
